[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "l9-ci-debt-intelligence"
version = "0.1.0"
description = "Corpus ingest, offense/defense pipeline, and packaging for L9 CI-debt intelligence"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.21",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "typer>=0.12",
    "cyclonedx-python-lib>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"
