[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "l9-ci-debt-intelligence"
version = "0.2.0"
description = "Fleet learning and prevention artifact compiler for the L9 CI constellation"
requires-python = ">=3.11"
license = { text = "Proprietary" }
dependencies = [
  "jsonschema>=4.23,<5",
  "pydantic>=2.8,<3",
  "PyYAML>=6.0,<7",
  "duckdb>=1.1,<2",
  "pyarrow>=17,<20",
  "cryptography>=43,<46",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "ruff>=0.9,<1"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[project.scripts]
l9-intelligence = "l9_debt_intelligence.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/l9_debt_intelligence"]
